<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="0dp"
            android:layout_height="134dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/coronavirus"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/covid19" />

        <ImageButton
            android:id="@+id/star"
            android:layout_width="54dp"
            android:layout_height="52dp"
            android:layout_marginTop="679dp"
            android:background="@android:drawable/btn_star_big_on"
            android:contentDescription="@string/risk"
            android:scaleType="fitXY"
            android:tint="@color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:layout_constraintVertical_bias="0.963"
            app:srcCompat="@android:drawable/btn_star" />

        <TextView
            android:id="@+id/nameTag"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:layout_constraintVertical_bias="0.137"
            style="@style/subtitle" />

        <TextView
            android:id="@+id/ageTag"
            style="@style/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/edad"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/nameTag"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/nameTag"
            app:layout_constraintTop_toBottomOf="@+id/nameTag"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameTag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/nameTag"
            tools:ignore="LabelFor"
            android:autofillHints="" />

        <EditText
            android:id="@+id/ageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/ageTag"
            app:layout_constraintEnd_toEndOf="@+id/nameText"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/ageTag"
            tools:ignore="LabelFor"
            android:importantForAutofill="no" />

        <ScrollView
            android:id="@+id/generalScroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/symptomsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainTitle"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/generalInfo"
                style="@style/body"
                android:text="@string/generalInfo" />
        </ScrollView>

        <Button
            android:id="@+id/virusButton"
            style="@style/button"
            android:text="@string/virus"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/symptomsButton"
            app:layout_constraintEnd_toStartOf="@+id/symptomsButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/indicationsButton"
            style="@style/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/indications"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/symptomsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/symptomsButton" />

        <Button
            android:id="@+id/symptomsButton"
            style="@style/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="36dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/symptoms"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/indicationsButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/virusButton"
            app:layout_constraintTop_toBottomOf="@+id/generalScroll" />

        <TextView
            android:id="@+id/mainTitle"
            style="@style/title"
            android:text="@string/coronavirus"
            android:textColor="#575757"
            app:layout_constraintBottom_toTopOf="@+id/nameTag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:layout_constraintVertical_bias="0.292" />

        <TextView
            android:id="@+id/personalRisk"
            style="@style/accentText"
            android:text="@string/coronavirus"
            app:layout_constraintBottom_toTopOf="@+id/generalScroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainTitle"
            app:layout_constraintVertical_bias="0.436" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>