<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            type="com.example.appslab3pabloruiz.CovidDataClass"
            name="SelectedAttribute" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DatosCovid19">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={SelectedAttribute.subtitle}"
                    android:textAlignment="center"
                    android:textAppearance="@style/subtitle"
                    tools:layout_conversion_absoluteHeight="505dp"
                    tools:layout_conversion_absoluteWidth="379dp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="65dp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={SelectedAttribute.description}"
                    android:textAppearance="@style/body" />

                <TextView
                    android:id="@+id/commentSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/commentSubtitle"
                    android:textAppearance="@style/subtitle" />

                <EditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/comment"
                    android:inputType="textPersonName"
                    android:importantForAutofill="no" />

                <Button
                    android:id="@+id/publishButton"
                    style="@style/buttonText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/publish"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={SelectedAttribute.title}"
            android:textAlignment="center"
            android:textAppearance="@style/title"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/scrollView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>